tests/spec/emit/snapshots/match_same_variable_in_multiple_matches_option.snap
---
source: tests/spec/emit/patterns.rs
description: |
  
  fn test() -> int {
    let opt1: Option<int> = Some(5);
    let x1 = match opt1 {
      Some(v) => v,
      None => 0,
    };
  
    let opt2: Option<int> = Some(10);
    let x2 = match opt2 {
      Some(v) => v,
      None => 0,
    };
  
    x1 + x2
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

func test() int {
	opt1 := lisette.MakeOptionSome(5)
	var x1 int
	if opt1.Tag == lisette.OptionSome {
		x1 = opt1.SomeVal
	} else {
		x1 = 0
	}
	opt2 := lisette.MakeOptionSome(10)
	var x2 int
	if opt2.Tag == lisette.OptionSome {
		x2 = opt2.SomeVal
	} else {
		x2 = 0
	}
	return x1 + x2
}
