tests/spec/emit/snapshots/match_self_struct_field_pattern_uses_receiver_name.snap
---
source: tests/spec/emit/patterns.rs
description: |
  
  struct Point { x: int, y: int }
  
  impl Point {
    fn describe(self) -> string {
      match self {
        Point { x: 0, y: 0 } => "origin",
        Point { x: 0, y: _ } => "y-axis",
        Point { x: _, y: 0 } => "x-axis",
        _ => "other",
      }
    }
  }
---
package main

type Point struct {
	x int
	y int
}

func (p Point) describe() string {
	if p.x == 0 && p.y == 0 {
		return "origin"
	} else if p.x == 0 {
		return "y-axis"
	} else if p.y == 0 {
		return "x-axis"
	}
	return "other"
}
