tests/spec/emit/snapshots/match_single_arm_struct_ident_subject_unused.snap
---
source: tests/spec/emit/control_flow.rs
description: |
  
  struct P { v: int }
  fn test() {
    let p = P { v: 1 }
    let _ = match p {
      P { v } => (),
    }
  }
---
package main

type P struct {
	v int
}

func test() {
	p := P{v: 1}
	var tmp struct{}
	_ = p
	tmp = struct{}{}
	_ = tmp
}
