tests/spec/emit/snapshots/match_single_arm_struct_unused_subject.snap
---
source: tests/spec/emit/control_flow.rs
description: |
  
  struct P { v: int }
  fn mk() -> P { P { v: 1 } }
  fn test() {
    match mk() {
      P { v } => (),
    }
  }
---
package main

type P struct {
	v int
}

func mk() P {
	return P{v: 1}
}

func test() {
	_ = mk()
}
