tests/spec/emit/snapshots/match_slice_pattern_fixed_length.snap
---
source: tests/spec/emit/control_flow.rs
description: |
  
  fn test(items: Slice<int>) -> int {
    match items {
      [a, b, c] => a + b + c,
      _ => 0,
    }
  }
---
package main

func test(items []int) int {
	if len(items) == 3 {
		return items[0] + items[1] + items[2]
	}
	return 0
}
