tests/spec/emit/snapshots/match_slice_pattern_rest_binding.snap
---
source: tests/spec/emit/control_flow.rs
description: |
  
  fn len(items: Slice<int>) -> int {
    match items {
      [] => 0,
      [first, ..rest] => 1 + len(rest),
    }
  }
---
package main

func len_(items []int) int {
	if len(items) == 0 {
		return 0
	}
	return 1 + len_(items[1:])
}
